--- a/html_1.html
+++ b/html_1.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style_1.css">
         <title>Qualifications</title>
     </head>
     <body>
+        <div class="header_1">
+            <h1>Qualifications</h1>
         <h1>Phd</h1>
-        <p style = "color:red" title="about phd"><a href="https://www.google.com"><abbr title="Doctor of philisophy">PhD</abbr> </a> is the highest level of education</p>
+        <!-- <button onclick="https://wwww.google.com"></button> -->
+        <p style = "color:red" title="about phd"><a href="https://www.google.com" target="_blank"><abbr title="Doctor of philisophy">PhD</abbr> </a> is the highest level of education</p>
+       </div>
+
+       <div class="header_2">
         <h2>Master</h2>
         <p style="color: brown;">Master is the second highest level of education</p>
+         </div>
+
+        <div class="lists_1"> 
+        <ol>
+            <li>Master of Science</li>
+            <li>Master of Arts</li>
+        </ol>
+
+        <dl>
+            <dt>Coffee</dt>
+            <dd>- black hot drink</dd>
+            <dt>Milk</dt>
+            <dd>- white cold drink</dd>
+          </dl>
+
+          <p>My mother has <span style="color:blue;font-weight:bold;">blue</span> eyes and my father has <span style="color:darkolivegreen;font-weight:bold;">dark green</span> eyes.</p>
+        </div>
     </body>
 </html>
 
